# qt-server

./: CMakeLists.txt  README.md  connecttodb.h  dataCrudApi.h  main.cpp  mytable.cpp  mytable.h  server.h
